--- a/docs/css/theme/black.css
+++ b/docs/css/theme/black.css
@@ -145,9 +145,9 @@ body {
   width: 90%;
   margin: 20px auto;
   text-align: left;
-  font-size: 0.55em;
+  font-size: 16px;
   font-family: monospace;
-  line-height: 1.2em;
+  line-height: 1;
   word-wrap: break-word;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
@@ -160,7 +160,8 @@ body {
   padding: 5px;
   overflow: auto;
   max-height: 400px;
-  word-wrap: normal; }
+  word-wrap: normal; 
+  background-color: rgba(255, 255, 255, 0.05); }
 
 .reveal table {
   margin: auto;
@@ -249,14 +250,14 @@ body {
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #42affa; }
+  color: rgb(209, 107, 50); }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #42affa; }
+  color: rgb(209, 107, 50); }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
