--- a/docs/css/theme/black.css
+++ b/docs/css/theme/black.css
@@ -16,7 +16,7 @@ body {
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 42px;
+  font-size: 34px;
   font-weight: normal;
   color: #fff; }
 
@@ -159,7 +159,7 @@ body {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
+  max-height: 600px;
   word-wrap: normal; 
   background-color: rgba(255, 255, 255, 0.05); }
 
@@ -208,14 +208,14 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #42affa;
+  color: rgb(209, 107, 50);
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
  
 .reveal a:hover {
-  color: #8dcffc;
+  color: rgb(249, 147, 80);
   text-shadow: none;
   border: none; }
 
@@ -228,9 +228,9 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
-  background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  background: transparent;
+  border: none;
+  box-shadow: none; }
 
 .reveal section img.plain {
   border: 0;
